--- a/source/mainwindow.ui
+++ b/source/mainwindow.ui
@@ -13,10 +13,39 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#centralwidget {
+background: #333333;
+border: none;
+border-right: 1px solid black;
+}
+#menubar {
+background: #555555;
+color: white;
+border: none;
+border-right: 1px solid black;
+}
+#statusbar {
+background: #555555;
+color: white;
+border: none;
+border-right: 1px solid black;
+}
+#label {
+  color: white;
+ background-color: #444444;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QFrame" name="frame_3">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>60</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
@@ -89,18 +118,25 @@
         <item row="0" column="0">
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
+           <layout class="QGridLayout" name="gridLayout_4">
+            <item row="1" column="1">
+             <widget class="QPushButton" name="pushButton_2">
+              <property name="text">
+               <string>Delete Material</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
              <widget class="QPushButton" name="pushButton">
               <property name="text">
                <string>Add Material</string>
               </property>
              </widget>
             </item>
-            <item>
-             <widget class="QPushButton" name="pushButton_2">
+            <item row="0" column="0">
+             <widget class="QPushButton" name="pushButton_5">
               <property name="text">
-               <string>Delete Material</string>
+               <string>Highlight</string>
               </property>
              </widget>
             </item>
@@ -117,12 +153,30 @@
                <x>0</x>
                <y>0</y>
                <width>280</width>
-               <height>390</height>
+               <height>356</height>
               </rect>
              </property>
              <layout class="QGridLayout" name="gridLayout_2">
               <item row="0" column="0">
                <widget class="QTreeWidget" name="treeWidget">
+                <property name="frameShape">
+                 <enum>QFrame::NoFrame</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Plain</enum>
+                </property>
+                <property name="lineWidth">
+                 <number>0</number>
+                </property>
+                <property name="alternatingRowColors">
+                 <bool>true</bool>
+                </property>
+                <property name="sortingEnabled">
+                 <bool>true</bool>
+                </property>
+                <property name="animated">
+                 <bool>true</bool>
+                </property>
                 <column>
                  <property name="text">
                   <string notr="true">1</string>
@@ -167,7 +221,7 @@
             <widget class="QToolButton" name="toolButton_2">
              <property name="geometry">
               <rect>
-               <x>80</x>
+               <x>140</x>
                <y>10</y>
                <width>51</width>
                <height>23</height>
@@ -190,7 +244,7 @@
               </rect>
              </property>
              <property name="text">
-              <string>clear</string>
+              <string>Clear</string>
              </property>
             </widget>
             <widget class="QToolButton" name="toolButton_4">
@@ -203,7 +257,7 @@
               </rect>
              </property>
              <property name="text">
-              <string>add</string>
+              <string>Add</string>
              </property>
             </widget>
             <widget class="QToolButton" name="toolButton_5">
@@ -216,7 +270,39 @@
               </rect>
              </property>
              <property name="text">
-              <string>remove</string>
+              <string>Remove</string>
+             </property>
+            </widget>
+            <widget class="QToolButton" name="toolButton_6">
+             <property name="geometry">
+              <rect>
+               <x>200</x>
+               <y>10</y>
+               <width>51</width>
+               <height>23</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Wand</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+            <widget class="QToolButton" name="zoomToggle">
+             <property name="geometry">
+              <rect>
+               <x>80</x>
+               <y>10</y>
+               <width>51</width>
+               <height>23</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Zoom</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </widget>
@@ -226,7 +312,10 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>TextLabel</string>
+           <string/>
+          </property>
+          <property name="class" stdset="0">
+           <string>bottomLabel</string>
           </property>
          </widget>
         </item>
@@ -271,10 +360,10 @@
             </size>
            </property>
            <property name="verticalScrollBarPolicy">
-            <enum>Qt::ScrollBarAlwaysOn</enum>
+            <enum>Qt::ScrollBarAsNeeded</enum>
            </property>
            <property name="horizontalScrollBarPolicy">
-            <enum>Qt::ScrollBarAlwaysOn</enum>
+            <enum>Qt::ScrollBarAsNeeded</enum>
            </property>
            <property name="widgetResizable">
             <bool>false</bool>
@@ -290,32 +379,16 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>781</width>
+              <width>794</width>
               <height>576</height>
              </rect>
             </property>
-            <widget class="QLabel" name="Image1">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>256</width>
-               <height>256</height>
-              </rect>
-             </property>
-             <property name="focusPolicy">
-              <enum>Qt::WheelFocus</enum>
-             </property>
-             <property name="text">
-              <string>No data loaded</string>
-             </property>
-             <property name="scaledContents">
-              <bool>false</bool>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
            </widget>
           </widget>
           <widget class="QWidget" name="layoutWidget">
@@ -329,84 +402,34 @@
                </size>
               </property>
               <property name="widgetResizable">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <widget class="QWidget" name="scrollAreaWidgetContents_2">
                <property name="geometry">
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>453</width>
+                 <width>107</width>
                  <height>281</height>
                 </rect>
                </property>
-               <widget class="QLabel" name="Image2">
-                <property name="geometry">
-                 <rect>
-                  <x>0</x>
-                  <y>0</y>
-                  <width>256</width>
-                  <height>256</height>
-                 </rect>
-                </property>
-                <property name="mouseTracking">
-                 <bool>true</bool>
-                </property>
-                <property name="focusPolicy">
-                 <enum>Qt::ClickFocus</enum>
-                </property>
-                <property name="text">
-                 <string>No data loaded</string>
-                </property>
-                <property name="scaledContents">
-                 <bool>true</bool>
-                </property>
-               </widget>
               </widget>
              </widget>
             </item>
             <item>
              <widget class="QScrollArea" name="scrollArea_3">
               <property name="widgetResizable">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <widget class="QWidget" name="scrollAreaWidgetContents_3">
                <property name="geometry">
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>453</width>
+                 <width>107</width>
                  <height>281</height>
                 </rect>
                </property>
-               <widget class="QLabel" name="Image3">
-                <property name="geometry">
-                 <rect>
-                  <x>0</x>
-                  <y>0</y>
-                  <width>256</width>
-                  <height>256</height>
-                 </rect>
-                </property>
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="mouseTracking">
-                 <bool>true</bool>
-                </property>
-                <property name="focusPolicy">
-                 <enum>Qt::ClickFocus</enum>
-                </property>
-                <property name="text">
-                 <string>No data loaded</string>
-                </property>
-                <property name="scaledContents">
-                 <bool>true</bool>
-                </property>
-               </widget>
               </widget>
              </widget>
             </item>
